@@ -412,3 +412,7 @@
 - Added Har'koan Relic to the loot table of Har'koan Subduer for the quest Relics of the Snow Leopard Goddess.
 - Updated the flags of Har'koan Relic to allow every member of a group to loot it.
 - Added Gundrak Raptor Egg to the loot table of Gundrak Raptor for the quest Eggs for Dubra'Jin.
+- Updated the respawn time of Weeping Quarry Document.
+- Updated the respawn time of Weeping Quarry Ledger.
+- Updated the respawn time of Weeping Quarry Map.
+- Updated the respawn time of Weeping Quarry Schedule.
